--- a/web-products/resources/css/app.css
+++ b/web-products/resources/css/app.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+/* Archivo principal de estilos: styles.css */
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
