--- a/web-products/resources/css/styles.css
+++ b/web-products/resources/css/styles.css
@@ -69,6 +69,14 @@ html, body, .login-dark, .dark-card {
   margin: 1.5rem 0;
 }
 
+.action-bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  margin-bottom: 1.5rem;
+}
+
 /* Productos */
 .dark-card {
   background: #27272a;
